[package]
name = "ferro"
version = "0.1.0"
authors = ["Giovanni Ferron <gvnnrulez@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0.0"
actix-rt = "1.0.0"
env_logger = "0.7.1"
serde = "1.0.103"
serde_json = "1.0.44"
serde_derive = "1.0.103"
juniper = "0.14.2"
askama = "0.9"

[build-dependencies]
askama = "0.9"